fixed everything security related

--- a/webapp/src/main/resources/templates/login.html
+++ b/webapp/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
       xmlns:spring="http://www.springframework.org/tags">
 <head lang="en">
     <meta charset="UTF-8" />
-    <title>HELLO</title>
+    <title>Log In</title>
 </head>
 <body>
 
@@ -11,6 +11,7 @@
 
 <p>You will have to log in:</p>
 <form name="loginForm" th:action="@{/login}" method="POST">
+
     <table>
         <tr>
             <td>Email:</td>
