added models of caroption, pack and car, and also repositories

--- a/webapp/src/main/resources/templates/login.html
+++ b/webapp/src/main/resources/templates/login.html
@@ -10,22 +10,17 @@
 <h4>Login</h4>
 
 <p>You will have to log in:</p>
-<form name="loginForm" th:action="@{/login}" method="POST">
+<form name="f" th:action="@{/login}" method="POST">
     <table>
         <tr>
             <td>Email:</td>
-            <td><input type="text" name="email" value="" /></td>
+            <td><input type="text" name="username" value="" /></td>
         </tr>
         <tr>
             <td>Password</td>
             <td><input type="password" name="password" value="" /></td>
         </tr>
-        <tr>
-            <td colspan="2">
-                <input id="remember_me" name="remember-me" type="checkbox"/>
-                <label for="remember_me" style="display: inline">Remember me</label>
-            </td>
-        </tr>
+
         <tr>
             <td colspan="2">
                 <input type="submit" name="submit" value="Log In"/>
