--- a/webapp/src/main/resources/templates/caroptions.html
+++ b/webapp/src/main/resources/templates/caroptions.html
@@ -1,11 +1,25 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:spring="http://www.springframework.org/tags">
 <head>
+    <script th:src="@{/js/jquery-2.0.2.min.js}"></script>
+    <script th:src="@{/js/jquery.dataTables.js}"></script>
+
+    <script th:src="@{/js/jquery-ui.js}"></script>
+    <script th:src="@{/js/jquery.dataTables.columnFilter.js}"></script>
+
+
+
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready( function () {
+            $('#cartable').dataTable().columnFilter();
+
+        } );
+    </script>
 
     <title></title>
 </head>
 <body>
-<table>
+<table id="cartable">
     <thead>
     <tr>
         <th>Name </th>
@@ -14,7 +28,14 @@
 
     </tr>
     </thead>
-       <tbody>
+    <tfoot>
+    <tr>
+        <th>Name</th>
+        <th>Description</th>
+    </tr>
+    </tfoot>
+
+    <tbody>
 
 
     <tr th:each="caroption  : ${carOptionList}">
@@ -31,5 +52,6 @@
     </tr>
     </tbody>
 </table>
+
 </body>
 </html>
