--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -33,6 +33,9 @@
 <div class="scripts" th:remove="tag">
     <script th:src="@{/js/jquery-2.0.2.min.js}"></script>
     <script th:src="@{/js/bootstrap-3.0.3.min.js}"></script>
+    <script th:src="@{/js/jquery.dataTables.js}"></script>
+    <script th:src="@{/js/jquery.ui.js}"></script>
+    <script th:src="@{/js/jquery.dataTables.columnFilter.js}"></script>
 </div>
 </body>
 </html>
