--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <title>RealDolmen Fleet</title>
+    <link th:href="@{/favicon.ico}" rel="shortcut icon"/>
     <link th:href="@{/css/bootstrap-3.0.3.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
 
@@ -18,6 +20,7 @@
 
         <ul class="nav navbar-nav">
             <li><a th:href="@{/index}">Home</a></li>
+            <li th:if="${session.loggedInUserCanOrderNewCar}"><a th:href="@{/employees/select-car}">Ordering Car Available!</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Login</a></li>
@@ -33,6 +36,7 @@
 <div class="scripts" th:remove="tag">
     <script th:src="@{/js/jquery-2.0.2.min.js}"></script>
     <script th:src="@{/js/bootstrap-3.0.3.min.js}"></script>
+
 </div>
 </body>
 </html>
