changed start flow, user must login to access anything, the 'index' is now personal overview

--- a/webapp/src/main/resources/templates/employees/overview.html
+++ b/webapp/src/main/resources/templates/employees/overview.html
@@ -8,8 +8,8 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <p>Welcome to the RealDolmen Fleet portal!</p>
-            <p>//TODO TEKST?</p>
+            <H2>Personal Overview</H2>
+            <p>//TODO</p>
         </div>
     </div>
 
