--- a/webapp/src/main/resources/templates/createpack.html
+++ b/webapp/src/main/resources/templates/createpack.html
@@ -43,8 +43,8 @@
         <tr>
             <th>Name </th>
             <th>Description</th>
-            <th> Add to pack </th>
-            <th></th>
+            <th> </th>
+
         </tr>
         </thead>
         <tfoot>
@@ -67,9 +67,9 @@
 
             <td> <a th:href="${#mvc.url('PC#addOption').arg(0, caroption.id).build()}" > Add to pack </a> </td>
 
-
+<!--
             <td> <a th:onclick="'javascript:addInPack(\'' + ${caroption.id} + '\');'" > badd </a> </td>
-
+-->
 
 
 
@@ -77,19 +77,40 @@
         </tr>
         </tbody>
     </table>
+
+
+
 </form>
 
 
 
     <br/>
 
+            <form method="POST" th:object="${carOption}"  action="/createnewpackoption">
+                <div th:class="${#fields.hasErrors('name')}? 'has-error'">
+                    <label th:for="${#ids.next('name')}"> name:</label>
+                    <input type="text" th:field="*{name}" />
+                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+                </div>
 
+                <div th:class="${#fields.hasErrors('description')}? 'has-error'">
+                    <label th:for="${#ids.next('description')}"> description:</label>
+                    <input type="text" th:field="*{description}" />
+                    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
+                </div>
+
+
+                <br/>
+                <button type="submit">Add new pack Option </button>
+            </form>
 
         </div>
 
         <hr/>
     </div>
     </div>
+
+
 
 
     <div th:replace="fragments/fragments :: div.scripts"></div>
