--- a/webapp/src/main/resources/templates/packs.html
+++ b/webapp/src/main/resources/templates/packs.html
@@ -11,7 +11,7 @@
         <th>Name </th>
         <th>Price</th>
         <th>nbr of Options </th>
-
+        <th> </th>
 
     </tr>
     </thead>
@@ -26,7 +26,7 @@
 
         <td th:text="${pack.carOptions.size()}"></td>
 
-
+        <td> <a th:href="${#mvc.url('EPC#editPack').arg(0, pack.id).build()}" > Edit pack </a> </td>
 
 
 
