--- a/webapp/src/main/resources/templates/fleet/allow-order.html
+++ b/webapp/src/main/resources/templates/fleet/allow-order.html
@@ -16,8 +16,9 @@
                     <input type="submit" class="form-control" value="Allow Order"/>
                 </form>
             </div>
-            <div id="allowUsersThatMeetCriteria">
-                <h2>Employees That Need New Car</h2>
+            <h2>Employees That Need New Car</h2>
+            <p th:if="${usersThatNeedPermission.isEmpty()}">No employees that meet the criteria to order a new car.</p>
+            <div id="allowUsersThatMeetCriteria" th:if="${!usersThatNeedPermission.isEmpty()}">
                 These employees meet one or more criteria and need to order a new car.
                <table class="table">
                    <thead>
