ordering from free pool the right way

--- a/webapp/src/main/resources/templates/employees/order-car.html
+++ b/webapp/src/main/resources/templates/employees/order-car.html
@@ -22,7 +22,16 @@
                     <input type="submit" class="form-control" value="Confirm Order"/>
                 </div>
                 <div id="colorInput">
-                    Fill in color: <input type="text" id="color" name="color" class="form-control" value="black"/>
+                    Fill in color: <select id="color" name="color" class="form-control">
+                        <option value="Black">Black</option>
+                        <option value="Silver">Silver</option>
+                        <option value="White">White</option>
+                        <option value="Blue">Blue</option>
+                        <option value="Red">Red</option>
+                        <option value="Green">Green</option>
+                        <option value="Yellow">Yellow</option>
+                        <option value="Orange">Orange</option>
+                    </select>
                 </div>
                 <div id="extraPacks" style="width:49%; float:left;">
                     <h3>Select extra packs:</h3>
