--- a/webapp/src/main/resources/templates/employees/order-confirmed.html
+++ b/webapp/src/main/resources/templates/employees/order-confirmed.html
@@ -11,7 +11,7 @@
             <H2>Order Confirmed</H2>
             <p>Your order has been placed and is sent to Fleet.</p>
             <p>Fleet will treat this as soon as possible.</p>
-            <p>Return to your <a th:href="@{/employees/overview}">personal overview</a></p>
+            <p>Return to your <a th:href="@{/}">personal overview</a></p>
         </div>
     </div>
 
