--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -9,6 +9,9 @@
     <link th:href="@{/favicon.ico}" rel="shortcut icon"/>
     <link th:href="@{/css/bootstrap-3.0.3.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
+    <link th:href="@{/css/jquery-ui.css}" rel="stylesheet"/>
+    <link th:href="@{/css/jquery-ui.structure.css}" rel="stylesheet"/>
+    <link th:href="@{/css/jquery-ui.theme.css}" rel="stylesheet"/>
 </head>
 <body>
 
@@ -45,6 +48,7 @@
     <script th:src="@{/js/jquery.dataTables.js}"></script>
     <script th:src="@{/js/jquery.ui.js}"></script>
     <script th:src="@{/js/jquery.dataTables.columnFilter.js}"></script>
+    <script th:src="@{/js/jquery-ui.js}"></script>
 </div>
 </body>
 </html>
