--- a/webapp/src/main/resources/templates/login.html
+++ b/webapp/src/main/resources/templates/login.html
@@ -4,45 +4,31 @@
 <div th:replace="fragments/fragments :: header"></div>
 
 <div class="container">
-    <div th:replace="fragments/fragments :: div#page-header"></div>
-    <div class="row">
-        <div class="col-lg-12">
+<div th:replace="fragments/fragments :: div#page-header"></div>
+<div class="row">
+    <div class="col-lg-12">
+            <div style="width: 25%; float:none; margin-left:auto; margin-right:auto;">
+                <form name="loginForm" th:action="@{/login}" method="POST">
+                    <fieldset>
+                        <legend>Please Login</legend>
+                        <div th:if="${param.error}" class="alert alert-error">
+                            Invalid email or password.
+                        </div>
+                        <label for="email">Email</label>
+                        <input type="text" id="email" name="email" class="form-control"/>
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" class="form-control"/>
 
-
-            <h4>Login</h4>
-
-            <p>You will have to log in:</p>
-            <form name="loginForm" th:action="@{/login}" method="POST">
-
-                <table>
-                    <tr>
-                        <td>Email:</td>
-                        <td><input type="text" name="email" value="" /></td>
-                    </tr>
-                    <tr>
-                        <td>Password</td>
-                        <td><input type="password" name="password" value="" /></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">
-                            <input id="remember_me" name="remember-me" type="checkbox"/>
-                            <label for="remember_me" style="display: inline">Remember me</label>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">
-                            <input type="submit" name="submit" value="Log In"/>
-                        </td>
-                    </tr>
-                </table>
-
-            </form>
-
-
+                        <div class="form-actions">
+                            <button type="submit" class="form-control">Log in</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </div>
 
-    <hr/>
+<hr/>
 </div>
 
 <div th:replace="fragments/fragments :: div.scripts"></div>
